--- a/index.html
+++ b/index.html
@@ -71,7 +71,17 @@
 </head>
 
 <body>
+
+
+    <div id="navbar">
+
+        <H1 id="nav-heading">Story For Kids</H1>
+    </div>
     <header>
+        
+
+
+
         <div id="main-heading-div">
             <h1 id="main-heading-storyforkids">Story For Kids</h1>
         </div>
